--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@ body {
 
 <body>
 
-<h1>Salary Prediction</h1>
+<h1>Hey Techie! What Is Your Salary Range?</h1>
 
 <div>
  <!-- Html form which will get all the values from user -->
